# seraph-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  RUFF_FIXES_SUMMARY.md  TESTING_QUICKSTART.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  fastmcp.json  prod.fastmcp.json  proxy.fastmcp.json  pyproject.toml  run_seraph.py  test_integration.sh
.github/workflows/: ci.yml  pre-commit.yml
benchmarks/: README.md  __init__.py  compression_comparison.py
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONFIG_AUDIT_2025.md  DEPENDENCY_CLEANUP.md  INDEX.md  PLUGIN_GUIDE.md  PLUGIN_ROADMAP.md  PROJECT_MODERNIZATION_2025.md  PROVIDERS.md  PROXY_SETUP.md  SDD.md  TESTING.md  TESTING_GUIDE.md
docs/publishing/: PUBLISH_TO_PYPI.md
docs/redis/: REDIS_SETUP.md
examples/: provider_example.py
examples/context_optimization/: hybrid_compression_demo.py
scripts/: README.md  install.sh  setup-pre-commit.sh  validate_ci.sh
src/: __init__.py  errors.py  proxy.py  server.py
src/budget_management/: __init__.py  analytics.py  config.py  enforcer.py  tracker.py
src/cache/: __init__.py  factory.py  interface.py
src/cache/backends/: __init__.py  memory.py  redis.py
src/config/: __init__.py  loader.py  schemas.py
src/context_optimization/: README.md  __init__.py  config.py  embeddings.py  mcp_middleware.py  middleware.py  models.py  optimizer.py  seraph_compression.py
src/observability/: __init__.py  database.py  db_models.py  monitoring.py
src/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  models_dev.py  openai_compatible.py  openai_provider.py  resilient_provider.py
src/resilience/: __init__.py  circuit_breaker.py  retry.py
src/security/: __init__.py  config.py  injection_detector.py  validators.py
src/semantic_cache/: __init__.py  cache.py  config.py  embeddings.py  eviction.py
src/seraph_mcp/token_optimization/: config.py  cost_estimator.py  tools.py
src/token_optimization/: __init__.py  config.py  cost_estimator.py  counter.py  optimizer.py  tools.py
src/validation/: __init__.py  decorators.py  tool_schemas.py
tests/: README.md  __init__.py  conftest.py  test_context_optimization.py  test_optimization_result_fields.py
tests/integration/: test_cache_factory.py  test_mcp_middleware_e2e.py  test_mcp_middleware_integration.py
tests/integration/token_optimization/: test_integration.py
tests/unit/cache/: __init__.py  test_memory_backend.py  test_redis_backend.py
tests/unit/context_optimization/: __init__.py  test_mcp_middleware.py  test_metrics_integration.py  test_middleware_integration.py  test_seraph_compression.py  test_timeout_handling.py
tests/unit/security/: test_injection_detector.py
tests/unit/semantic_cache/: __init__.py  test_eviction.py
tests/unit/token_optimization/: __init__.py  test_cost_estimator.py  test_counter.py  test_optimizer.py
tests/unit/validation/: test_decorators.py
